--- a/project/css/components/Logo.css
+++ b/project/css/components/Logo.css
@@ -5,7 +5,7 @@
     background-size: cover;
     height: 36px;
     width: 36px;
-    margin: 5px -10px;
+    margin: 4px -10px;
     vertical-align: middle;
 }
 
