--- a/project/css/components/MoodDisplay.css
+++ b/project/css/components/MoodDisplay.css
@@ -4,16 +4,25 @@
     width: 125px;
     height: 100px;
     padding: 0;
-    margin: 20px 0;
+    margin: 20px 0 20px 20px;
 }
 
 .smiley-box-sm {
     display: inline-block;
-    margin: 20px 0;
+    margin: 20px 8px;
 }
 
+.smiley-box-sm:first-of-type {
+    margin-left: 0;
+}
+
+.smiley-box-sm:last-of-type {
+    margin-right: 0;
+}
 
 .mood-selector-box {
     margin: 10px 0;
     padding: 0;
 }
+
+
